--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Dice</title>
+    <title>Dice Game</title>
     <link rel="icon" href="favicon2.ico">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,11 +15,11 @@
       <h1>Lucky Roll!</h1>
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="images/dice6.png">
+        <img class="img1" src="images/dice6.png" alt="dice image1">
       </div>
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="images/dice6.png">
+        <img class="img2" src="images/dice6.png" alt="dice image2">
       </div>
     </div>
     
